Stop images getting too tall

--- a/src/_includes/assets/css/themes/fac.css
+++ b/src/_includes/assets/css/themes/fac.css
@@ -87,7 +87,8 @@ h2 {
 
 img {
   min-width: 4rem;
-  max-width: 90%;
+  max-width: 90vw;
+  max-height: 90vh;
   height: auto;
   margin: 0 auto;
 }
